# zeldspar

./: .travis.yml  Backend.hs  Examples.hs  Exp.hs  Frontend.hs  LICENSE  Parallel.hs  README.md  RunIO.hs  Zeldspar.hs  zeldspar.cabal
examples/: FFT.hs  FFT_in2a.txt  FFT_in4a.txt  ZeldsparTest.hs  ZiriaTest.hs  noise.hs
src/: Parallel.hs  Z.hs  Zeldspar.hs  Ziria.hs
src/Zeldspar/: Parallel.hs
src/Ziria/: Parallel.hs
tests/: Examples.hs
