name:                zeldspar
version:             0.1
synopsis:            Ziria + Feldspar
-- description:
license:             BSD3
license-file:        LICENSE
-- author:
-- maintainer:
-- copyright:
category:            Language
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
  Examples.hs

library
  exposed-modules:
    Ziria
    Parallel
    Zeldspar

  hs-source-dirs: src

  default-language: Haskell2010

  build-depends:
    base                    >=4.6 && <4.9,
    feldspar-compiler-shim,
    feldspar-language,
    imperative-edsl         >=0.2 && <0.3,
    transformers

test-suite Examples
  type: exitcode-stdio-1.0

  hs-source-dirs: tests examples

  main-is: Examples.hs

  default-language: Haskell2010

  build-depends:
    base,
    feldspar-language,
    imperative-edsl,
    zeldspar
