name:                zeldspar
version:             0.2
synopsis:            Ziria + Feldspar
-- description:
license:             BSD3
license-file:        LICENSE
-- author:
-- maintainer:
-- copyright:
category:            Language
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
  Examples.hs

library
  exposed-modules:
    Zeldspar.Parallel
    Zeldspar
    Ziria.Parallel
    Ziria

  hs-source-dirs: src

  default-language: Haskell2010

  default-extensions:
    GADTs
    KindSignatures
    MultiParamTypeClasses
    RankNTypes
    ScopedTypeVariables

  build-depends:
    base < 5,
    raw-feldspar,
    transformers

test-suite Examples
  type: exitcode-stdio-1.0

  hs-source-dirs: tests examples

  main-is: Examples.hs

  default-language: Haskell2010

  build-depends:
    base,
    imperative-edsl,
    raw-feldspar,
    zeldspar
