name:                zeldspar
version:             0.2
synopsis:            Ziria + Feldspar
description:         see README.md
license:             BSD3
license-file:        LICENSE
-- author:              Máté Karácsony
maintainer:          k_mate@inf.elte.hu
copyright:           Copyright (c) 2016, Máté Karácsony
category:            Language
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
    README.md
    examples/*.hs
    tests/*.hs

library
  exposed-modules:
    Zeldspar.Parallel
    Zeldspar
    Ziria.Parallel
    Ziria

  hs-source-dirs: src

  default-language: Haskell2010

  default-extensions:
    GADTs
    RankNTypes
    ScopedTypeVariables

  build-depends:
    base < 5,
    mtl,
    raw-feldspar,
    transformers

test-suite Examples
  type: exitcode-stdio-1.0

  hs-source-dirs: tests examples

  main-is: Examples.hs

  default-language: Haskell2010

  build-depends:
    base,
    imperative-edsl,
    raw-feldspar,
    zeldspar
